background-color correction

--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,7 @@ $sm: 480px;
 body {
     font-family: $ff;
     font-size: $fs;
-    background: $White no-repeat top;
+    background: $Purple-100 no-repeat top;
     background-size: contain;
 
     min-height: 100vh;
